--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,10 @@
   "compilerOptions": {
     "strict": true,
     "paths": {
-      "@/*": [
-        "./*"
-      ]
-    }
+      "@/*": ["./src/*"],
+      "@assets/*": ["./assets/*"]
+    },
+    "forceConsistentCasingInFileNames": true
   },
   "include": [
     "**/*.ts",
